RESOLVED FIXED49496
broken-ideographic-font.html is failing on Mac
https://bugs.webkit.org/show_bug.cgi?id=49496
Summary broken-ideographic-font.html is failing on Mac
Dave Hyatt
Reported 2010-11-13 11:57:41 PST
broken-ideographic-font.html is failing on Mac.
Attachments
Patch (3.04 KB, patch)
2010-11-13 11:58 PST, Dave Hyatt
mitz: review+
Dave Hyatt
Comment 1 2010-11-13 11:58:05 PST
WebKit Review Bot
Comment 2 2010-11-13 12:00:10 PST
Attachment 73829 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--diff-files', u'WebCore/ChangeLog', u'WebCore/platform/graphics/mac/SimpleFontDataCoreText.cpp']" exit_code: 1 WebCore/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:7: Line contains tab character. [whitespace/tab] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 3 2010-11-13 12:00:45 PST
Fixed in r71972.
mitz
Comment 4 2010-11-13 12:06:04 PST
Comment on attachment 73829 [details] Patch tabs in the change log
WebKit Review Bot
Comment 5 2010-11-13 13:17:27 PST
http://trac.webkit.org/changeset/71972 might have broken SnowLeopard Intel Release (Tests)
Note You need to log in before you can comment on or make changes to this bug.