https://bugs.webkit.org/show_bug.cgi?id=49496

Fix broken-ideographic-font.html.  I had the font installed locally on my machine, and this covered up
the fact that CoreText was implicitly using it as fallback in the vertical case only.  The bots don't have
the font installed locally, and so they showed the bug.

Make sure the GlyphPage is filled with horizontal glyphs for a broken ideograph font, so that CoreText is
willing to fill.

* platform/graphics/mac/SimpleFontDataCoreText.cpp:
(WebCore::SimpleFontData::getCFStringAttributes):



Canonical link: https://commits.webkit.org/62443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71972 268f45cc-cd09-0410-ab3c-d52691b4dbfc